--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -3,6 +3,8 @@ html {
 }
 
 h1 {
-	font-size: 1.5rem;
+	font-size: 1.125rem;
+	line-height: 1.75rem;
 	font-weight: 600;
+	margin-bottom: 0.25rem;
 }
